package com.ueims.model.entity;

import java.time.LocalDateTime;

import jakarta.persistence.*;

import lombok.*;

@Entity
@Table(name = "interviews")
@Data
@EqualsAndHashCode(callSuper = true)
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Interview extends BaseEntity {
    @Id
    @GeneratedValue(strategy = GenerationType.UUID)
    @Column(name = "interview_id")
    private java.util.UUID interviewId;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "application_id", nullable = false)
    private Application application;

    @Column(name = "scheduled_datetime", nullable = false)
    @com.fasterxml.jackson.annotation.JsonAlias("scheduledDatetime")
    @com.fasterxml.jackson.annotation.JsonFormat(pattern = "yyyy-MM-dd'T'HH:mm:ss[.SSS][X]")
    private LocalDateTime scheduledTime;

    @Column(name = "location", length = 500)
    private String location;

    @Column(name = "meeting_link", length = 500)
    private String meetingLink;

    @Column(name = "duration_minutes")
    private Integer durationMinutes;

    @Column(name = "status", nullable = false, length = 20)
    @Builder.Default
    private String status = "SCHEDULED";

    @Column(name = "student_confirmed", nullable = false)
    @Builder.Default
    private Boolean studentConfirmed = false;

    @Column(name = "result", length = 20)
    private String result;

    @Column(name = "result_note", columnDefinition = "TEXT")
    private String feedback;

    @Column(name = "cancel_reason", columnDefinition = "TEXT")
    private String cancelReason;

    @Column(name = "reschedule_reason", columnDefinition = "TEXT")
    private String rescheduleReason;

    @Column(name = "canceled_at")
    private LocalDateTime canceledAt;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "decided_by")
    private User decidedBy;

    // --- Backdate audit trail (demo only) ---
    // Set by InterviewAdminController.backdateSchedule when an admin moves
    // scheduled_datetime into the past under the demo flag. The BR-35 trigger
    // will refuse the UPDATE unless all four fields are populated.
    @Column(name = "is_backdated", nullable = false)
    @Builder.Default
    private Boolean isBackdated = false;

    @Column(name = "backdated_at")
    private LocalDateTime backdatedAt;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "backdated_by")
    private User backdatedBy;

    @Column(name = "backdated_reason", columnDefinition = "TEXT")
    private String backdatedReason;
}
